--- a/doc/res/manual.css
+++ b/doc/res/manual.css
@@ -1,73 +1,132 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Sans:400|PT+Serif:400,400i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i|Assistant:200,300,400,600,700,800&display=swap');
 
 html {
-    font: 16px/1.4 'PT Serif', Georgia, Times, 'Times New Roman', serif;
+    font: 18px/1.4 'Assistant', Helvetica, Arial, sans-serif;
 }
 
 body {
-    margin: 0 auto;
-    padding: 2rem 1rem;
-    max-width: 80ch;
-}
-
-section, aside {
-    margin: 2rem 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'PT Sans', Helvetica, Arial, sans-serif;
-    font-weight: normal;
+    height: 100%;
     margin: 0;
-    padding: 0;
+    padding: 1rem;
+    box-sizing: border-box;
+
+    display: grid;
+    grid-template-rows: max-content auto min-content;
+    grid-template-columns: minmax(20ch, 1fr) 70ch 1fr;
+    grid-column-gap: 2em;
+}
+
+body > nav
+{
+    grid-column: 1;
+    grid-row: 2 / 3;
+}
+
+body > header,
+body > main,
+body > footer
+{
+    grid-column: 2;
 }
 
 a {
-    color: #0e60b2;
+    color: #2454C7;
+    text-decoration: none;
 }
 
-p {
-    margin: 1em 0;
+a:hover {
+    text-decoration: underline;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Playfair Display;
+    margin: 0;
+}
+
+/* The document header */
+
+header {
+    line-height: 1;
+    margin: 2rem 0;
+}
+
+header > hgroup > h1 {
+    font-size: 4rem;
+    font-weight: normal;
+    margin: 0 0 0.5rem;
+}
+
+header > hgroup > h2 {
+    color: #444;
+    font-family: Playfair Display;
+    font-weight: normal;
+    font-style: italic;
+    margin: 0;
+}
+
+/* The navigation bar */
+
+nav {
+    font-size: 0.8em;
+    flex-basis: 80ch;
+    text-align: right;
+    position: relative;
+    opacity: 0.6;
+    transition: 0.2s opacity;
+}
+
+nav:hover {
+    opacity: 1;
+}
+
+nav a {
+    color: inherit;
+    text-decoration: none;
+}
+
+nav a:hover {
+    color: #2454C7;
+}
+
+nav ol,
+nav li
+{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    position: sticky;
+    top: 0;
+}
+
+nav > ol > li {
+    font-weight: bold;
+    margin-bottom: 1em;
+}
+
+nav > ol > li > ol {
+    font-weight: normal;
+}
+
+/* main content */
+
+main > p:first-child {
+    margin-top: 0;
+}
+
+section {
+    margin: 2rem 0;
 }
 
 aside {
-    box-sizing: border-box;
-    border-left: 2px solid black;
-    contain: layout;
-    padding: 0 1rem;
-    margin: 1rem 1rem 1rem 4rem;
-    min-height: 3rem;
-    position: relative;
+    border-left: 4px solid #2454C7;
+    padding: 0 0 0 0.5em;
+    margin: 1rem 0 1rem 2rem;
 }
 
-aside::before {
-    content: ' ';
-    display: block;
-    height: 2rem;
-    left: -3rem;
-    margin-top: -1rem;
-    position: absolute;
-    top: 50%;
-    width: 2rem;
-
-    mask-size: contain;
-}
-
-aside.caution {
-    background-color: #eddfdf;
-    border-color: #a05151;
-}
-
-aside.caution::before {
-    background-color: #a05151;
-    mask-image: url('/res/alert.svg');
-}
-
-aside.wip {
-    background-color: #e7dfed;
-    border-color: #7e52a0;
-}
-
-aside.wip::before {
-    background-color: #7e52a0;
-    mask-image: url('/res/wip.svg');
+/* footer */
+footer {
+    font-size: 0.8em;
+    opacity: 0.5;
+    text-align: center;
+    padding: 2rem 0;
 }
