--- a/doc/res/manual.css
+++ b/doc/res/manual.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Code|Playfair+Display:400,400i|Assistant:400,400i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fira+Code|Playfair+Display:400,400i|PT+Serif:400,400i,700,700i&display=swap');
 
 html {
-    font: 18px/1.4 'Assistant', Helvetica, Arial, sans-serif;
+    font: 16px/1.4 'PT Serif', Georgia, Times, Times New Roman, serif;
 }
 
 body {
@@ -20,9 +20,14 @@ a:hover {
     text-decoration: underline;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
     font-family: Playfair Display;
+    font-weight: normal;
     margin: 0;
+}
+
+h3 {
+    font-variant: small-caps;
 }
 
 /* The document header */
@@ -59,11 +64,8 @@ nav a {
     position: relative;
 }
 
-nav .current a.viewing:after {
-    content: "◃";
-    display: inline-block;
-    padding-left: 2px;
-    position: absolute;
+nav .current a.viewing {
+    color: #2454C7;
 }
 
 nav a:hover {
@@ -97,6 +99,18 @@ main > p:first-child {
 section {
     margin: 2rem 0;
 }
+
+h1 + section,
+h2 + section,
+h3 + section,
+h4 + section,
+h5 + section,
+h6 + section
+{
+    margin-top: 1em;
+}
+
+
 
 code {
     background: #f4f4f4;
@@ -159,7 +173,7 @@ footer {
 }
 
 /* Special rules for tiny views */
-@media screen and (max-width: 70ch) {
+@media screen and (max-width: 60ch) {
     nav {
         background-color: #f8f8f8;
         border: 1px solid #ddd;
@@ -169,7 +183,7 @@ footer {
 }
 
 /* Special rules for small views */
-@media screen and (max-width: 70ch) and (min-width: 40ch) {
+@media screen and (max-width: 60ch) and (min-width: 40ch) {
     nav {
         float: right;
         margin: 0 0 1rem 1rem;
@@ -178,33 +192,37 @@ footer {
 }
 
 /* Special rules for big views */
-@media screen and (min-width: 70ch) {
-    body {
-        display: grid;
-        grid-template-columns: 1fr minmax(45ch, 70ch) 1fr;
-        grid-template-rows: max-content auto min-content;
-        grid-column-gap: 2ch;
-    }
-
+@media screen and (min-width: 60ch) {
     header > hgroup > h1 {
         font-size: 4rem;
     }
     
-    body.toc {
-        grid-template-columns: minmax(15ch, 1fr) minmax(45ch, 70ch) 1fr;
+    body {
+        display: grid;
+        grid-template-columns: 1fr 0 minmax(45ch, 70ch) 1fr;
+        grid-template-rows: max-content max-content min-content;
     }
-    
+
+    body.toc {
+        grid-template-columns: 1fr 15ch minmax(45ch, 70ch) 1fr;
+        grid-column-gap: 4ch;
+    }
+
     body > nav
     {
-        grid-column: 1;
-        grid-row: 2 / 3;
+        grid-column: 2;
+        grid-row: 2;
     }
     
     body > header,
-    body > main,
-    body > footer
+    body > main
     {
-        grid-column: 2;
+        grid-column: 3;
+    }
+
+    body > footer {
+        grid-row: 3;
+        grid-column: 2 / 4;
     }
 
     aside {
